--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                             <div class="caption">
                                 <div class="caption-content">
                                     <div class="h2 bg-rnd-dark text-center">Calibr8ting Project</div>
-                                    <p class="mx-auto bg-rnd-dark text-center ">As of now this is an edited website based off of bootstrap 5</p>
+                                    <p class="mx-auto bg-rnd-dark text-center "> A basic demo made to present to a client as a proof of concept</p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/pullmanProjectPicture.PNG" alt="..." />
@@ -123,7 +123,7 @@
                             <div class="caption">
                                 <div class="caption-content ">
                                     <div class="h2 bg-rnd-dark text-center">Python Chess App</div>
-                                    <p class="bg-rnd-dark text-center">An incomplete chess app in python</p>
+                                    <p class="bg-rnd-dark text-center">An python chess app (in progress)</p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/chess.PNG" alt="..." />
