--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <!-- Header-->
         <header class="masthead d-flex align-items-center">
             <div class="text-center container px-4 px-lg-5">
-                <h1 class="mb-1">Kyle's Portfolio</h1>
+                <h1 class="mb-1">Kyle Hansen</h1>
                 <h3 class="mb-5"><em>A quick look at my portfolio and work history</em></h3>
                 <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
             </div>
