--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Kyle Hansen</title>
+        <title>Kyle's Portfolio - A Bootstrap Template Redesigned</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -22,7 +22,7 @@
         <a class="menu-toggle rounded" href="#"><i class="fas fa-bars"></i></a>
         <nav id="sidebar-wrapper">
             <ul class="sidebar-nav">
-                <li class="sidebar-brand"><a href="#page-top">Kyle Hansen</a></li>
+                <li class="sidebar-brand"><a href="#page-top">Kyle's Portfolio</a></li>
                 <li class="sidebar-nav-item"><a href="#page-top">Home</a></li>
                 <li class="sidebar-nav-item"><a href="#about">About</a></li>
                 <li class="sidebar-nav-item"><a href="#services">Services</a></li>
@@ -33,8 +33,9 @@
         <!-- Header-->
         <header class="masthead d-flex align-items-center">
             <div class="text-center container px-4 px-lg-5">
+                <img class="img-fluid" src="assets/img/kyle_2021.jpeg" alt="..." />
                 <h1 class="mb-1">Kyle Hansen</h1>
-                <h3 class="mb-5"><em>A quick look at my portfolio and work history</em></h3>
+                <h3 class="mb-5"><em>An aspiring service now/ software developer</em></h3>
                 <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
             </div>
         </header>
@@ -43,12 +44,8 @@
             <div class="container px-4 px-lg-5 text-center">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-10">
-                        <h2>A Portfolio to show you the perfect candidate for your coding needs!</h2>
-                        <p class="lead mb-5">
-                            This theme features a flexible, UX friendly sidebar menu and stock photos from my friends at
-                            <a href="https://unsplash.com/">Unsplash</a>
-                            !
-                        </p>
+                        <h2>It is my mission to achieve goals and help others do the same so we can accomplish our dreams together.</h2>
+
                         <a class="btn btn-dark btn-xl" href="#services">See My Skill Set</a>
                     </div>
                 </div>
@@ -59,7 +56,7 @@
             <div class="container px-4 px-lg-5">
                 <div class="content-section-heading">
                     <h3 class="text-secondary mb-0">Knowledge</h3>
-                    <h2 class="mb-5">What I have to offer</h2>
+                    <h2 class="mb-5">Programming Languages</h2>
                 </div>
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
@@ -88,14 +85,17 @@
 <!--                        <p class="text-faded mb-0">I mustache you a question...</p>-->
                     </div>
                 </div>
+
             </div>
         </section>
         <!-- Callout-->
         <section class="callout">
             <div class="container px-4 px-lg-5 text-center">
-                <h2 class="mx-auto mb-5 text-light bg-rnd-dark">
-                    “Any fool can write code that a computer can understand.<br> Good programmers write code that humans can understand.”<br> – Martin Fowler
-                </h2>
+                <h2 class="mx-auto mb-5 text-light bg-rnd-dark">About Me</h2>
+                <p class="mx-auto mb-5 text-light bg-rnd-dark"> Hi, my name is Kyle. Over the past few years I have been learning programming skills in the hopes of
+                    getting into the technology field for a career. I have the privilege of having several family members
+                    who are in the tech industry, some are even programmers and software developers. My hope is that I can get to
+                    the point where I can be a part of creating something useful and innovative.</p>
 
             </div>
         </section>
@@ -112,7 +112,7 @@
                             <div class="caption">
                                 <div class="caption-content">
                                     <div class="h2 bg-rnd-dark text-center">Calibr8ting Project</div>
-                                    <p class="mx-auto bg-rnd-dark text-center "> A basic demo made to present to a client as a proof of concept</p>
+                                    <p class="mx-auto bg-rnd-dark text-center ">As of now this is an edited website based off of bootstrap 5</p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/pullmanProjectPicture.PNG" alt="..." />
@@ -123,7 +123,7 @@
                             <div class="caption">
                                 <div class="caption-content ">
                                     <div class="h2 bg-rnd-dark text-center">Python Chess App</div>
-                                    <p class="bg-rnd-dark text-center">An python chess app (in progress)</p>
+                                    <p class="bg-rnd-dark text-center">An incomplete chess app in python</p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/chess.PNG" alt="..." />
@@ -140,6 +140,50 @@
                             <img class="img-fluid" src="assets/img/calibr8%20ERD.PNG" alt="..." />
                         </a>
                     </div>
+                    <div class="col-lg-12">
+                        <a class="portfolio-item" href="#!">
+                            <div class="caption">
+                                <div class="caption-content">
+                                    <div class="h2 bg-rnd-dark text-center">Capstone</div>
+                                    <p class="bg-rnd-dark text-center">Extra info here</p>
+                                </div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/portfolio-1.jpg" alt="..." />
+                        </a>
+                    </div>
+                    <div class="col-lg-12">
+                        <a class="portfolio-item" href="#!">
+                            <div class="caption">
+                                <div class="caption-content">
+                                    <div class="h2 bg-rnd-dark text-center">Incident Management Methodology</div>
+                                    <p class="bg-rnd-dark text-center">Extra info here</p>
+                                </div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/portfolio-2.jpg" alt="..." />
+                        </a>
+                    </div>
+                    <div class="col-lg-12">
+                        <a class="portfolio-item" href="#!">
+                            <div class="caption">
+                                <div class="caption-content">
+                                    <div class="h2 bg-rnd-dark text-center">JIRA</div>
+                                    <p class="bg-rnd-dark text-center">Extra info here</p>
+                                </div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/portfolio-3.jpg" alt="..." />
+                        </a>
+                    </div>
+                    <div class="col-lg-12">
+                        <a class="portfolio-item" href="#!">
+                            <div class="caption">
+                                <div class="caption-content">
+                                    <div class="h2 bg-rnd-dark text-center">ServiceNow Feature Demos</div>
+                                    <p class="bg-rnd-dark text-center">Extra info here</p>
+                                </div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/portfolio-4.jpg" alt="..." />
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -149,15 +193,13 @@
             <div class="container px-4 px-lg-5">
                 <ul class="list-inline mb-5">
                     <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white mr-3" href="#!"><i class="icon-social-facebook"></i></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white mr-3" href="#!"><i class="icon-social-twitter"></i></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white" href="#!"><i class="icon-social-github"></i></a>
+                        <a class="social-link rounded-circle text-white" href="https://github.com/khansen804"><i class="icon-social-github"></i></a>
                     </li>
                 </ul>
+                <div class="container px-4 px-lg-5 text-center">
+                <p class="mx-auto mb-5 text-light bg-rnd-dark"> Contact me at: khansen804@yahoo.com, 2083405391, or visit my <a href="https://www.linkedin.com/in/kyle-hansen-9bb60821b/"> Linkedin </a> </p>
+
+            </div>
 <!--                <p class="text-muted small mb-0">Copyright &copy; Your Website 2021</p>-->
             </div>
         </footer>
