Adding new projects

--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
                             <div class="caption">
                                 <div class="caption-content">
                                     <div class="h2 bg-rnd-dark text-center">Calibr8ting Project</div>
-                                    <p class="mx-auto bg-rnd-dark text-center ">As of now this is an edited website based off of bootstrap 5</p>
+                                    <p class="mx-auto bg-rnd-dark text-center ">As of now this is an edited website based off of bootstrap 5 (Click on it)</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/pullmanProjectPicture.PNG" alt="..." />
+                            <img class="img-fluid" src="assets/img/pullmanProjectPicture.PNG" alt="A screenshot of the User front page on the Pullman project" />
                         </a>
                     </div>
                     <div class="col-lg-12">
@@ -126,7 +126,7 @@
                                     <p class="bg-rnd-dark text-center">An incomplete chess app in python</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/chess.PNG" alt="..." />
+                            <img class="img-fluid" src="assets/img/chess.PNG" alt="A screenshot of the chess game" />
                         </a>
                     </div>
                     <div class="col-lg-12">
@@ -137,40 +137,41 @@
                                     <p class="bg-rnd-dark text-center">The ERD designed for the CALIBR8TING project</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/calibr8%20ERD.PNG" alt="..." />
+                            <img class="img-fluid" src="assets/img/calibr8%20ERD.PNG" alt="An ERD diagram showcasing the construction of the database" />
                         </a>
                     </div>
                     <div class="col-lg-12">
                         <a class="portfolio-item" href="#!">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2 bg-rnd-dark text-center">Capstone</div>
-                                    <p class="bg-rnd-dark text-center">Extra info here</p>
+                                    <div class="h2 bg-rnd-dark text-center">Swagger UI</div>
+                                    <p class="bg-rnd-dark text-center"> A screenshot showing the implementation of swagger/Open API 3 into a php based API.</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio-1.jpg" alt="..." />
+                            <img class="img-fluid" src="assets\img\auth1.PNG" alt="A screenshot of the implemented Open api 3.0/swagger ui" />
                         </a>
                     </div>
                     <div class="col-lg-12">
-                        <a class="portfolio-item" href="#!">
+                        <a class="portfolio-item" href="principlesPage\Lesson2.html">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2 bg-rnd-dark text-center">Incident Management Methodology</div>
-                                    <p class="bg-rnd-dark text-center">Extra info here</p>
+                                    <div class="h2 bg-rnd-dark text-center">Design Principles in Practive</div>
+                                    <p class="bg-rnd-dark text-center">A page showing the use of several front end principles 
+                                        that will adjust to the user's screen size.</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio-2.jpg" alt="..." />
+                            <img class="img-fluid" src="assets\img\principles.PNG" alt="A showcase of the principles page" />
                         </a>
                     </div>
                     <div class="col-lg-12">
-                        <a class="portfolio-item" href="#!">
+                        <a class="portfolio-item" href="https://khansen804.github.io/wdd230/chamber/index.html">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2 bg-rnd-dark text-center">JIRA</div>
-                                    <p class="bg-rnd-dark text-center">Extra info here</p>
+                                    <div class="h2 bg-rnd-dark text-center">An example website in progress</div>
+                                    <p class="bg-rnd-dark text-center">Click to visit site</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio-3.jpg" alt="..." />
+                            <img class="img-fluid" src="portfolio.github.io\assets\img\Website.PNG" alt="Screenshot of the website" />
                         </a>
                     </div>
                     <div class="col-lg-12">
