resolved a minor image error

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                                     <p class="bg-rnd-dark text-center">Click to visit site</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="portfolio.github.io\assets\img\Website.PNG" alt="Screenshot of the website" />
+                            <img class="img-fluid" src="assets\img\Website.PNG" alt="Screenshot of the website" />
                         </a>
                     </div>
                     <div class="col-lg-12">
