commented out irrelevant section

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                             <img class="img-fluid" src="assets\img\Website.PNG" alt="Screenshot of the website" />
                         </a>
                     </div>
-                    <div class="col-lg-12">
+                    <!-- <div class="col-lg-12">
                         <a class="portfolio-item" href="#!">
                             <div class="caption">
                                 <div class="caption-content">
@@ -184,7 +184,7 @@
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio-4.jpg" alt="..." />
                         </a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
