final changes tonight

--- a/index.html
+++ b/index.html
@@ -92,10 +92,15 @@
         <section class="callout">
             <div class="container px-4 px-lg-5 text-center">
                 <h2 class="mx-auto mb-5 text-light bg-rnd-dark">About Me</h2>
-                <p class="mx-auto mb-5 text-light bg-rnd-dark"> Hi, my name is Kyle. Over the past few years I have been learning programming skills in the hopes of
-                    getting into the technology field for a career. I have the privilege of having several family members
-                    who are in the tech industry, some are even programmers and software developers. My hope is that I can get to
-                    the point where I can be a part of creating something useful and innovative.</p>
+                <p class="mx-auto mb-5 text-light bg-rnd-dark"> My name is Kyle Hansen, and I have a passion for learning new technologies 
+                    and working collaboratively in teams. Over the past year and a half, I've dedicated myself to gaining hands-on
+                     experience in software and web development. As a Junior Programmer at Connect and Conquer LLC, I've honed my 
+                     skills and contributed to various projects.<br>
+
+                    
+                    In addition to my practical experiences, I am pursuing formal education at BYU-Idaho. 
+                    My educational foundation, combined with my real-world experience, has equipped me with
+                     a strong foundation in programming with various languages and a commitment to continuous learning.</p>
 
             </div>
         </section>
@@ -155,7 +160,7 @@
                         <a class="portfolio-item" href="principlesPage\Lesson2.html">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2 bg-rnd-dark text-center">Design Principles in Practive</div>
+                                     <div class="h2 bg-rnd-dark text-center">Design Principles in Practive</div><!-- change this it looks bad -->
                                     <p class="bg-rnd-dark text-center">A page showing the use of several front end principles 
                                         that will adjust to the user's screen size.</p>
                                 </div>
